# bikewebsitebergen

./: .gitignore  README.md  dockerfile  pyproject.toml  ruff.toml
.github/workflows/: actions.yaml
src/: app.py  data_exploration.ipynb  main.py
src/templates/: biketraffic.html
src/utils/: mapping.py  plotting.py
