[tool.poetry]
name = "apitesting"
version = "0.1.0"
description = "testing docker"
authors = ["henrikubuntu <frishcoco@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
