[tool.poetry]
name = "apitesting"
version = "0.1.0"
description = "testing docker"
authors = ["henrikubuntu <frishcoco@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
plotly = "^5.20.0"
pandas = "^2.2.1"
matplotlib = "^3.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
