[tool.poetry]
name = "apitesting"
version = "0.1.0"
description = "testing docker"
authors = ["henrikubuntu <frishcoco@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
plotly = "^5.20.0"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
marimo = "^0.13.14"
pyarrow = "^20.0.0"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
